# reagents_core

./: .gitignore  .gitmodules  README.md  reagent-correctness.tex
01_kcas/: README.md  dune-project
01_kcas/src/: dune  kcas.ml  kcas.mli
01_kcas/test/: dune  lin_kcas.ml  test_kcas.ml
02_kcas_cmp/: README.md  dune-project
02_kcas_cmp/src/: kcas.ml  kcas.mli
02_kcas_cmp/test/: stm_kcas.ml  test_kcas.ml
03_stm/: README.md  dune-project
03_stm/src/: dune  kcas.mli  reagent.ml  reagent.mli  xt.ml  xt.mli
03_stm/test/: dune  lin_stm.ml  stm_stm.ml  test_stm.ml
04_channels/: README.md  dune-project
04_channels/src/: channel.ml  channel.mli  dune  kcas.ml  reagent.ml  reagent.mli  xt.ml  xt.mli
04_channels/test/: dune  lin_channels.ml  lin_stm.ml  stm_channels.ml  test_channel.ml  test_channels.ml  test_elimination.ml  test_stm.ml
05_lightweight/: README.md  dune-project
05_lightweight/src/: channel.ml  channel.mli  dune  kcas.mli  reagent.ml  reagent.mli  sched.ml  sched.mli  trigger.ml  trigger.mli  xt.ml  xt.mli
05_lightweight/test/: dune  test_lightweight.ml
reference/papers/arXiv-2008.02527v1/: main.bbl  main.tex  main.vtc
reference/papers/arXiv-2008.02527v1/tex/: abstract.tex  algos.tex  appendix-figures.tex  appendix.tex  cmds.tex  conclusion.tex  evaluation-figures.tex  evaluation.tex  intro.tex  lowerbound.tex  mem-mgmt.tex  model.tex  optimality.tex  related-work.tex
