(test
 (name test_stm)
 (libraries channels unix))

(test
 (name test_channel)
 (libraries channels))

(test
 (name test_elimination)
 (libraries channels unix))

(executable
 (name lin_stm)
 (libraries channels qcheck-lin.domain))

(executable
 (name stm_stm)
 (libraries channels qcheck-stm.domain qcheck-stm.sequential))
